# embassy-communicator

./: Cargo.toml  Makefile  build.rs  memory.x
.cargo/: config.toml
.make/: dependencies.mk  explain.sh  help.mk  toolchain.sh  vars.mk
aarch/: Cargo.toml
aarch/src/: cobs.rs  crc.rs  lib.rs  queue.rs
proto/: api.proto  error.proto
proto/v1/: equalizer.proto  v1.proto
python-client-demo/: Makefile  main.py  requirements.txt
src/: main.rs
src/proto/: mod.rs
src/proto/error/: mod.rs
src/proto/v1/: mod.rs
src/storage/: mod.rs
tests/: integration.rs
udev_rules/: 49-stlinkv1.rules
web-client-demo/: cobs.js  index.html  main.js
