[package]
edition = "2021"
name = "embassy-stm32h7-communicator"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "88fd521b", features = ["defmt"] }
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "88fd521b", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "88fd521b", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "88fd521b", features = ["nightly", "defmt", "stm32h723zg", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }
embedded-io = { version = "0.4.0", features = ["async"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "88fd521b", features = ["defmt"] }

# This doesn't quite work, and I'm not publishing to crates.io just yet.
# twpb = { git = "https://github.com/Juravenator/rust_twpb.git" }
# twpb_derive = { git = "https://github.com/Juravenator/rust_twpb.git" }
twpb = { path = "/home/jura/git/twpb/twpb" }
twpb_derive = { path = "/home/jura/git/twpb/twpb/twpb_derive" }

aarch = { path = "aarch" }
cobs = { version = "0.2.3", default-features = false }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
embedded-hal-async = { version = "=0.2.0-alpha.0" }
embedded-nal-async = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.2.4"
embedded-storage = "0.3.0"
static_cell = "1.0"
atomic_enum = "0.2.0"

[dev-dependencies]
defmt-test = "0.3"

[[test]]
name = "integration"
harness = false # don't use the standard harness (`test` crate)

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
