[package]
edition = "2021"
name = "embassy-stm32h7-communicator"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "d6f42ea", version = "0.1.0" }
# Changed stm32h743bi to stm32h723zg.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "d6f42ea", version = "0.1.0", features = ["nightly", "defmt", "stm32h723zg", "time-driver-any", "exti", "memory-x", "unstable-pac", "unstable-traits", "chrono"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "d6f42ea", version = "0.4.0", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d6f42ea", version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d6f42ea", version = "0.1.5", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "d6f42ea", version = "0.2.0", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "d6f42ea", version = "0.1.0", features = ["defmt"] }
embedded-io-async = { version = "0.6.0" }

# This doesn't quite work, and I'm not publishing to crates.io just yet.
# twpb = { git = "https://github.com/Juravenator/rust_twpb.git" }
# twpb_derive = { git = "https://github.com/Juravenator/rust_twpb.git" }
twpb = { path = "/home/jura/git/twpb/twpb" }
twpb_derive = { path = "/home/jura/git/twpb/twpb/twpb_derive" }

aarch = { path = "aarch" }
cobs = { version = "0.2.3", default-features = false }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
embedded-nal-async = { version = "0.6.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.0"
static_cell = { version = "1.1", features = ["nightly"]}
chrono = { version = "^0.4", default-features = false }
atomic_enum = "0.2.0"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-